Revision history for Test-Ping

0.05
        some POD changes and subroutine returns to keep up with perlcritic
        added -T to tests
        added 03-icmp.t

0.04    24.04.09
        added test for possible bug in Net::Ping
        got it stable
        removed BIND and PORT support for now
        
0.03    22.04.09
        separated variable tests to a different file
        added TIMEOUT, PORT, BIND, SOURCE_VERIFY, SERVICE_CHECK, TCP_SERVICE_CHECK

0.02    22.04.09
        ping_ok() now works

0.01    22.04.09
        Basic skeleton
