@@ -4,6 +4,7 @@ Revision history for Test-Ping
         some POD changes and subroutine returns to keep up with perlcritic
         added -T to tests
         added 03-icmp.t
+        added 04-object.t and _get_object()
 
 0.04    24.04.09
         added test for possible bug in Net::Ping
